<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    tools:context=".ui.fragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_category" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/locationTextTV"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/locationTextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:alpha="0.6"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/new_york_ny"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeExtraSmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/cardBackground"
            app:cardCornerRadius="7dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_avatar" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/searchET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:alpha=".3"
        android:autofillHints="name"
        android:background="@drawable/bg_et"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/paddingExtraLarge"
        android:fontFamily="@font/rubik_regular"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="@dimen/paddingExtraLarge"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/textSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTop" />


    <TextView
        android:id="@+id/categoryTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:alpha=".9"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/popular_categories"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintTop_toBottomOf="@+id/searchET" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTV">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardFlight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toStartOf="@+id/cardViewHotel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.22"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/flightIV"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_flight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/flightTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/flights"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/flightIV" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewHotel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toStartOf="@+id/cardViewVisa"
            app:layout_constraintStart_toEndOf="@+id/cardFlight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.22"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/hotelIV"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_hotels"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hotelTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/hotels"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hotelIV" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewVisa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"

            app:layout_constraintEnd_toStartOf="@+id/cardViewBuses"
            app:layout_constraintStart_toEndOf="@+id/cardViewHotel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.22"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/visaIV"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_visa"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/visaTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/visa"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/visaIV" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewBuses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardViewVisa"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.22"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/busesIV"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_buses"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/BusesTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/buses"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/busesIV" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/recommendedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:alpha=".9"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/recommended"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCategory" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/seeAllTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCategory"
        app:srcCompat="@drawable/see_all" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerRecommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/seeAllTV"
        tools:itemCount="3"
        tools:listitem="@layout/row_recommended" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/buttonCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerRecommended"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <ImageView
                android:id="@+id/homeIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bookmarkIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_bookmark2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/notificationIV"
                app:layout_constraintStart_toEndOf="@+id/homeIV"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/notificationIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profileIV"
                app:layout_constraintStart_toEndOf="@+id/bookmarkIV"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profileIV"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>